Инкапсулированы индексы в InMemoryProductRepository и добавлен поиск продуктов по диапазону цен